fix: add z-index property in sidebar component

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     transition: all 0.3s ease;
     position: absolute;
+    z-index: 10000000;
     overflow: hidden;
   
     &.collapsed {
